# fipsdroid

./: .gitignore  Cargo.toml  README.md  build-android.sh  test_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-timer-audit.md  task-10-cargo-ndk.txt  task-14-verification.txt  task-6-transport-tests.txt  task-7-node-tests.txt  task-9-ble-manager.txt
.sisyphus/notepads/: WAVE3_PREP.md  test-strategy.md
.sisyphus/notepads/fipsdroid-revised/: learnings.md
.sisyphus/plans/: fipsdroid-revised.md  fipsdroid.md
android/: fix-uniiffi-bindings.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/fipsdroid/: BleDemoActivity.kt  BridgeViewModel.kt  FipsDroidApp.kt  MainActivity.kt
android/app/src/main/java/com/fipsdroid/ble/: BleConnectionManager.kt  BlePermissions.kt  RustBridge.kt
android/app/src/main/java/com/fipsdroid/ui/: ConnectionStateIndicator.kt  DebugScreen.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/fipsdroid/ble/: BleErrorTest.kt  BleStateTest.kt  StubRustBridgeTest.kt
crates/fipsdroid-core/: Cargo.toml
crates/fipsdroid-core/src/: bridge.rs  error.rs  lib.rs  node.rs  types.rs
crates/fipsdroid-core/src/transport/: ble.rs  mock.rs  mod.rs
docs/: embassy-audit.md  research-l2cap.md  research-uniffi.md
macos/relay/: L2capRelay.swift  fips-config.toml  fips.pub
(+2 files in other folders)
